[[bin]]
name = "polkadot"
path = "src/main.rs"

[[bin]]
name = "polkadot-execute-worker"
path = "src/bin/execute-worker.rs"

[[bin]]
name = "polkadot-prepare-worker"
path = "src/bin/prepare-worker.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
rust-version = "1.64.0" # workspace properties
readme = "README.md"
default-run = "polkadot"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.43"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = "0.5.0"

# Crates in our workspace, defined as dependencies so we can pass them feature flags.
polkadot-cli = { path = "cli", features = [ "polkadot-native", "kusama-native", "westend-native", "rococo-native" ]  }
polkadot-node-core-pvf = { path = "node/core/pvf" }
polkadot-node-core-pvf-prepare-worker = { path = "node/core/pvf/prepare-worker" }
polkadot-overseer = { path = "node/overseer" }

# Needed for worker binaries.
polkadot-node-core-pvf-common = { path = "node/core/pvf/common" }
polkadot-node-core-pvf-execute-worker = { path = "node/core/pvf/execute-worker" }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.2.0"
tokio = "1.24.2"
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
polkadot-core-primitives = { path = "core-primitives" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"erasure-coding/fuzzer",
	"primitives",
	"primitives/test-helpers",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/metrics",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/polkadot/constants",
	"runtime/kusama",
	"runtime/kusama/constants",
	"runtime/rococo",
	"runtime/rococo/constants",
	"runtime/westend",
	"runtime/westend/constants",
	"runtime/test-runtime",
	"runtime/test-runtime/constants",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/parachains-inherent",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/pvf/common",
	"node/core/pvf/execute-worker",
	"node/core/pvf/prepare-worker",
	"node/core/pvf-checker",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/gum",
	"node/gum/proc-macro",
	"node/metrics",
	"node/test/client",
	"node/test/performance-test",
	"node/test/service",
	"node/zombienet-backchannel",
	"rpc",
	"parachain",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/halt",
	"parachain/test-parachains/undying",
	"parachain/test-parachains/undying/collator",
	"utils/staking-miner",
	"utils/remote-ext-tests/bags-list",
	"utils/generate-bags",
]

[badges]
maintenance = { status = "actively-developed" }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = {opt-level = 3}
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]
jemalloc-allocator = ["polkadot-node-core-pvf-prepare-worker/jemalloc-allocator", "polkadot-overseer/jemalloc-allocator"]

# Enables timeout-based tests supposed to be run only in CI environment as they may be flaky
# when run locally depending on system load
ci-only-tests = ["polkadot-node-core-pvf/ci-only-tests"]

[patch."https://github.com/paritytech/substrate"]
node-template = { path = "/Users/parity_gpestana/parity/substrate/bin/node-template/node" }
frame-benchmarking = { path = "/Users/parity_gpestana/parity/substrate/frame/benchmarking" }
frame-support = { path = "/Users/parity_gpestana/parity/substrate/frame/support" }
frame-support-procedural = { path = "/Users/parity_gpestana/parity/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/parity_gpestana/parity/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/parity_gpestana/parity/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/parity_gpestana/parity/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/parity_gpestana/parity/substrate/primitives/api/proc-macro" }
sp-core = { path = "/Users/parity_gpestana/parity/substrate/primitives/core" }
sp-core-hashing = { path = "/Users/parity_gpestana/parity/substrate/primitives/core/hashing" }
sp-debug-derive = { path = "/Users/parity_gpestana/parity/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/parity_gpestana/parity/substrate/primitives/externalities" }
sp-std = { path = "/Users/parity_gpestana/parity/substrate/primitives/std" }
sp-storage = { path = "/Users/parity_gpestana/parity/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/parity_gpestana/parity/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/parity_gpestana/parity/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/parity_gpestana/parity/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/parity_gpestana/parity/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/parity_gpestana/parity/substrate/primitives/io" }
sp-keystore = { path = "/Users/parity_gpestana/parity/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/parity_gpestana/parity/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/parity_gpestana/parity/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/parity_gpestana/parity/substrate/primitives/trie" }
sp-runtime = { path = "/Users/parity_gpestana/parity/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/parity_gpestana/parity/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/parity_gpestana/parity/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/parity_gpestana/parity/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/Users/parity_gpestana/parity/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/parity_gpestana/parity/substrate/client/block-builder" }
sc-client-api = { path = "/Users/parity_gpestana/parity/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/parity_gpestana/parity/substrate/utils/prometheus" }
sc-executor = { path = "/Users/parity_gpestana/parity/substrate/client/executor" }
sc-executor-common = { path = "/Users/parity_gpestana/parity/substrate/client/executor/common" }
sc-allocator = { path = "/Users/parity_gpestana/parity/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/parity_gpestana/parity/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/parity_gpestana/parity/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/parity_gpestana/parity/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/Users/parity_gpestana/parity/substrate/utils/wasm-builder" }
sp-version = { path = "/Users/parity_gpestana/parity/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/parity_gpestana/parity/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/parity_gpestana/parity/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/parity_gpestana/parity/substrate/client/tracing" }
sc-tracing-proc-macro = { path = "/Users/parity_gpestana/parity/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/parity_gpestana/parity/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/common" }
sp-inherents = { path = "/Users/parity_gpestana/parity/substrate/primitives/inherents" }
sp-test-primitives = { path = "/Users/parity_gpestana/parity/substrate/primitives/test-primitives" }
sp-database = { path = "/Users/parity_gpestana/parity/substrate/primitives/database" }
sp-rpc = { path = "/Users/parity_gpestana/parity/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/Users/parity_gpestana/parity/substrate/test-utils/runtime" }
frame-executive = { path = "/Users/parity_gpestana/parity/substrate/frame/executive" }
frame-system = { path = "/Users/parity_gpestana/parity/substrate/frame/system" }
frame-try-runtime = { path = "/Users/parity_gpestana/parity/substrate/frame/try-runtime" }
pallet-balances = { path = "/Users/parity_gpestana/parity/substrate/frame/balances" }
pallet-transaction-payment = { path = "/Users/parity_gpestana/parity/substrate/frame/transaction-payment" }
frame-system-rpc-runtime-api = { path = "/Users/parity_gpestana/parity/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/Users/parity_gpestana/parity/substrate/frame/babe" }
pallet-authorship = { path = "/Users/parity_gpestana/parity/substrate/frame/authorship" }
pallet-session = { path = "/Users/parity_gpestana/parity/substrate/frame/session" }
pallet-timestamp = { path = "/Users/parity_gpestana/parity/substrate/frame/timestamp" }
sp-timestamp = { path = "/Users/parity_gpestana/parity/substrate/primitives/timestamp" }
sp-session = { path = "/Users/parity_gpestana/parity/substrate/primitives/session" }
sp-staking = { path = "/Users/parity_gpestana/parity/substrate/primitives/staking" }
sp-consensus-babe = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/parity_gpestana/parity/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/parity_gpestana/parity/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/parity_gpestana/parity/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/Users/parity_gpestana/parity/substrate/test-utils" }
substrate-test-utils-derive = { path = "/Users/parity_gpestana/parity/substrate/test-utils/derive" }
sc-service = { path = "/Users/parity_gpestana/parity/substrate/client/service" }
sc-chain-spec = { path = "/Users/parity_gpestana/parity/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/parity_gpestana/parity/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/parity_gpestana/parity/substrate/client/network" }
sc-network-common = { path = "/Users/parity_gpestana/parity/substrate/client/network/common" }
sc-consensus = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/common" }
sc-utils = { path = "/Users/parity_gpestana/parity/substrate/client/utils" }
sp-consensus-grandpa = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/parity_gpestana/parity/substrate/client/network/light" }
sc-network-sync = { path = "/Users/parity_gpestana/parity/substrate/client/network/sync" }
fork-tree = { path = "/Users/parity_gpestana/parity/substrate/utils/fork-tree" }
sc-telemetry = { path = "/Users/parity_gpestana/parity/substrate/client/telemetry" }
sc-client-db = { path = "/Users/parity_gpestana/parity/substrate/client/db" }
sc-state-db = { path = "/Users/parity_gpestana/parity/substrate/client/state-db" }
kitchensink-runtime = { path = "/Users/parity_gpestana/parity/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/Users/parity_gpestana/parity/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/parity_gpestana/parity/substrate/frame/system/benchmarking" }
node-primitives = { path = "/Users/parity_gpestana/parity/substrate/bin/node/primitives" }
pallet-alliance = { path = "/Users/parity_gpestana/parity/substrate/frame/alliance" }
pallet-collective = { path = "/Users/parity_gpestana/parity/substrate/frame/collective" }
pallet-identity = { path = "/Users/parity_gpestana/parity/substrate/frame/identity" }
pallet-asset-conversion = { path = "/Users/parity_gpestana/parity/substrate/frame/asset-conversion" }
pallet-assets = { path = "/Users/parity_gpestana/parity/substrate/frame/assets" }
pallet-asset-conversion-tx-payment = { path = "/Users/parity_gpestana/parity/substrate/frame/transaction-payment/asset-conversion-tx-payment" }
pallet-asset-rate = { path = "/Users/parity_gpestana/parity/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/Users/parity_gpestana/parity/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/Users/parity_gpestana/parity/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/parity_gpestana/parity/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/Users/parity_gpestana/parity/substrate/frame/bags-list" }
pallet-bounties = { path = "/Users/parity_gpestana/parity/substrate/frame/bounties" }
pallet-treasury = { path = "/Users/parity_gpestana/parity/substrate/frame/treasury" }
pallet-utility = { path = "/Users/parity_gpestana/parity/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/parity_gpestana/parity/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/Users/parity_gpestana/parity/substrate/frame/child-bounties" }
pallet-contracts = { path = "/Users/parity_gpestana/parity/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/Users/parity_gpestana/parity/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/Users/parity_gpestana/parity/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/Users/parity_gpestana/parity/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/Users/parity_gpestana/parity/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/Users/parity_gpestana/parity/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/Users/parity_gpestana/parity/substrate/frame/scheduler" }
pallet-preimage = { path = "/Users/parity_gpestana/parity/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/Users/parity_gpestana/parity/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/Users/parity_gpestana/parity/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/Users/parity_gpestana/parity/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/parity_gpestana/parity/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/Users/parity_gpestana/parity/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/Users/parity_gpestana/parity/substrate/frame/fast-unstake" }
pallet-staking = { path = "/Users/parity_gpestana/parity/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/Users/parity_gpestana/parity/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/Users/parity_gpestana/parity/substrate/frame/glutton" }
pallet-grandpa = { path = "/Users/parity_gpestana/parity/substrate/frame/grandpa" }
pallet-offences = { path = "/Users/parity_gpestana/parity/substrate/frame/offences" }
sp-keyring = { path = "/Users/parity_gpestana/parity/substrate/primitives/keyring" }
pallet-im-online = { path = "/Users/parity_gpestana/parity/substrate/frame/im-online" }
pallet-indices = { path = "/Users/parity_gpestana/parity/substrate/frame/indices" }
pallet-lottery = { path = "/Users/parity_gpestana/parity/substrate/frame/lottery" }
frame-support-test = { path = "/Users/parity_gpestana/parity/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/Users/parity_gpestana/parity/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/Users/parity_gpestana/parity/substrate/frame/membership" }
pallet-message-queue = { path = "/Users/parity_gpestana/parity/substrate/frame/message-queue" }
pallet-mmr = { path = "/Users/parity_gpestana/parity/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/parity_gpestana/parity/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/Users/parity_gpestana/parity/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/Users/parity_gpestana/parity/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/Users/parity_gpestana/parity/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/Users/parity_gpestana/parity/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/Users/parity_gpestana/parity/substrate/frame/nis" }
pallet-nomination-pools = { path = "/Users/parity_gpestana/parity/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/Users/parity_gpestana/parity/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/Users/parity_gpestana/parity/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/Users/parity_gpestana/parity/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/Users/parity_gpestana/parity/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/Users/parity_gpestana/parity/substrate/frame/recovery" }
pallet-referenda = { path = "/Users/parity_gpestana/parity/substrate/frame/referenda" }
pallet-remark = { path = "/Users/parity_gpestana/parity/substrate/frame/remark" }
pallet-salary = { path = "/Users/parity_gpestana/parity/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/Users/parity_gpestana/parity/substrate/frame/session/benchmarking" }
pallet-society = { path = "/Users/parity_gpestana/parity/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/Users/parity_gpestana/parity/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/Users/parity_gpestana/parity/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/parity_gpestana/parity/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/parity_gpestana/parity/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/Users/parity_gpestana/parity/substrate/frame/statement" }
sp-statement-store = { path = "/Users/parity_gpestana/parity/substrate/primitives/statement-store" }
pallet-sudo = { path = "/Users/parity_gpestana/parity/substrate/frame/sudo" }
pallet-tips = { path = "/Users/parity_gpestana/parity/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/parity_gpestana/parity/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/Users/parity_gpestana/parity/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/parity_gpestana/parity/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/Users/parity_gpestana/parity/substrate/frame/uniques" }
pallet-vesting = { path = "/Users/parity_gpestana/parity/substrate/frame/vesting" }
pallet-whitelist = { path = "/Users/parity_gpestana/parity/substrate/frame/whitelist" }
sp-block-builder = { path = "/Users/parity_gpestana/parity/substrate/primitives/block-builder" }
sp-offchain = { path = "/Users/parity_gpestana/parity/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/Users/parity_gpestana/parity/substrate/primitives/transaction-pool" }
sc-informant = { path = "/Users/parity_gpestana/parity/substrate/client/informant" }
sc-keystore = { path = "/Users/parity_gpestana/parity/substrate/client/keystore" }
sc-network-bitswap = { path = "/Users/parity_gpestana/parity/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/Users/parity_gpestana/parity/substrate/client/network/transactions" }
sc-rpc = { path = "/Users/parity_gpestana/parity/substrate/client/rpc" }
sc-transaction-pool = { path = "/Users/parity_gpestana/parity/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/Users/parity_gpestana/parity/substrate/test-utils/runtime/transaction-pool" }
sc-rpc-server = { path = "/Users/parity_gpestana/parity/substrate/client/rpc-servers" }
sc-rpc-spec-v2 = { path = "/Users/parity_gpestana/parity/substrate/client/rpc-spec-v2" }
sc-sysinfo = { path = "/Users/parity_gpestana/parity/substrate/client/sysinfo" }
sp-consensus-aura = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/aura" }
sp-genesis-builder = { path = "/Users/parity_gpestana/parity/substrate/primitives/genesis-builder" }
substrate-test-client = { path = "/Users/parity_gpestana/parity/substrate/test-utils/client" }
sc-offchain = { path = "/Users/parity_gpestana/parity/substrate/client/offchain" }
sp-runtime-interface-test-wasm = { path = "/Users/parity_gpestana/parity/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/Users/parity_gpestana/parity/substrate/primitives/metadata-ir" }
frame-benchmarking-cli = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/benchmarking-cli" }
sc-cli = { path = "/Users/parity_gpestana/parity/substrate/client/cli" }
node-template-runtime = { path = "/Users/parity_gpestana/parity/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/Users/parity_gpestana/parity/substrate/frame/aura" }
pallet-template = { path = "/Users/parity_gpestana/parity/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/Users/parity_gpestana/parity/substrate/frame/transaction-payment/rpc" }
sc-basic-authorship = { path = "/Users/parity_gpestana/parity/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/parity_gpestana/parity/substrate/client/proposer-metrics" }
sc-consensus-aura = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/slots" }
sc-network-test = { path = "/Users/parity_gpestana/parity/substrate/client/network/test" }
sc-consensus-grandpa = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/parity_gpestana/parity/substrate/client/network-gossip" }
substrate-frame-rpc-system = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/rpc/system" }
try-runtime-cli = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/Users/parity_gpestana/parity/substrate/test-utils/cli" }
substrate-build-script-utils = { path = "/Users/parity_gpestana/parity/substrate/utils/build-script-utils" }
node-bench = { path = "/Users/parity_gpestana/parity/substrate/bin/node/bench" }
node-testing = { path = "/Users/parity_gpestana/parity/substrate/bin/node/testing" }
node-executor = { path = "/Users/parity_gpestana/parity/substrate/bin/node/executor" }
node-cli = { path = "/Users/parity_gpestana/parity/substrate/bin/node/cli" }
node-inspect = { path = "/Users/parity_gpestana/parity/substrate/bin/node/inspect" }
node-rpc = { path = "/Users/parity_gpestana/parity/substrate/bin/node/rpc" }
mmr-rpc = { path = "/Users/parity_gpestana/parity/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/epochs" }
sc-consensus-babe-rpc = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/parity_gpestana/parity/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/Users/parity_gpestana/parity/substrate/client/authority-discovery" }
sc-network-statement = { path = "/Users/parity_gpestana/parity/substrate/client/network/statement" }
sc-statement-store = { path = "/Users/parity_gpestana/parity/substrate/client/statement-store" }
sc-storage-monitor = { path = "/Users/parity_gpestana/parity/substrate/client/storage-monitor" }
sc-service-test = { path = "/Users/parity_gpestana/parity/substrate/client/service/test" }
substrate-frame-cli = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder = { path = "/Users/parity_gpestana/parity/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/parity_gpestana/parity/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/beefy" }
sp-consensus-beefy = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/beefy/rpc" }
sc-consensus-manual-seal = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/manual-seal" }
sc-consensus-pow = { path = "/Users/parity_gpestana/parity/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/parity_gpestana/parity/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/Users/parity_gpestana/parity/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/Users/parity_gpestana/parity/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/Users/parity_gpestana/parity/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/Users/parity_gpestana/parity/substrate/frame/bags-list/remote-tests" }
pallet-beefy = { path = "/Users/parity_gpestana/parity/substrate/frame/beefy" }
pallet-beefy-mmr = { path = "/Users/parity_gpestana/parity/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/Users/parity_gpestana/parity/substrate/utils/binary-merkle-tree" }
pallet-election-provider-e2e-test = { path = "/Users/parity_gpestana/parity/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/parity_gpestana/parity/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/Users/parity_gpestana/parity/substrate/frame/examples" }
pallet-default-config-example = { path = "/Users/parity_gpestana/parity/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/Users/parity_gpestana/parity/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/Users/parity_gpestana/parity/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/Users/parity_gpestana/parity/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/Users/parity_gpestana/parity/substrate/frame/examples/offchain-worker" }
pallet-example-split = { path = "/Users/parity_gpestana/parity/substrate/frame/examples/split" }
pallet-nicks = { path = "/Users/parity_gpestana/parity/substrate/frame/nicks" }
pallet-node-authorization = { path = "/Users/parity_gpestana/parity/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/Users/parity_gpestana/parity/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/Users/parity_gpestana/parity/substrate/frame/nomination-pools/test-staking" }
pallet-paged-list = { path = "/Users/parity_gpestana/parity/substrate/frame/paged-list" }
pallet-paged-list-fuzzer = { path = "/Users/parity_gpestana/parity/substrate/frame/paged-list/fuzzer" }
pallet-scored-pool = { path = "/Users/parity_gpestana/parity/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/Users/parity_gpestana/parity/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/Users/parity_gpestana/parity/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/Users/parity_gpestana/parity/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/parity_gpestana/parity/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/parity_gpestana/parity/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/parity_gpestana/parity/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/Users/parity_gpestana/parity/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/parity_gpestana/parity/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/parity_gpestana/parity/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/parity_gpestana/parity/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/parity_gpestana/parity/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/Users/parity_gpestana/parity/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/Users/parity_gpestana/parity/substrate/utils/frame/generate-bags/node-runtime" }
substrate = { path = "/Users/parity_gpestana/parity/substrate" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "security@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["target/release/polkadot-prepare-worker", "/usr/lib/polkadot/", "755"],
	["target/release/polkadot-execute-worker", "/usr/lib/polkadot/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"
