[package]
name = "polkadot-api"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
error-chain = "0.12"
polkadot-executor = { path = "../executor" }
polkadot-runtime = { path = "../runtime" }
polkadot-primitives = { path = "../primitives" }
substrate-codec = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-runtime-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-runtime-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-runtime-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot" }
