[package]
name = "polkadot-availability-store"
description = "Persistent database for parachain data"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
parking_lot = "0.9.0"
derive_more = "0.99"
log = "0.4.8"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["rt-core"] }
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sc-network = { git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
client = { package = "sc-client-api", git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c", version = "2.0.0-rc5" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
sp-api = { git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
keystore = { package = "sc-keystore", git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "ae579a841587919bc12940388e994ef799c37e6c" }
kvdb = "0.7.0"
kvdb-memorydb = "0.7.0"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
kvdb-rocksdb = "0.9.0"
