[package]
name = "polkadot-availability-store"
description = "Persistent database for parachain data"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
parking_lot = "0.9.0"
derive_more = "0.99"
log = "0.4.8"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["rt-core"] }
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
consensus_common = { package = "sp-consensus", git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
client = { package = "sc-client-api", git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2", version = "2.0.0-rc5" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
keystore = { package = "sc-keystore", git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "send-notifications-subtest2" }
kvdb = "0.7.0"
kvdb-memorydb = "0.7.0"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
kvdb-rocksdb = "0.9.0"
